<resources>
    <string name="app_name">sekarya-mobile-app</string>
    <string name="home">Home</string>
    <string name="favorite">Favorite</string>
    <string name="search_hint">Search Artist or Job</string>
    <string name="hire">Hire</string>
    <string name="profile">Profile</string>
    <string name="reset_your_password">Reset your password</string>
    <string name="desc_reset_password">Please enter your email and we will send an OTP code in the next step to reset your password.</string>
    <string name="example_email">example@gmail.com</string>
    <string name="lanjut">Continue</string>
    <string name="otp_code_verification">OTP code verification</string>
    <string name="desc_otp_verif">We have sent an OTP code to your email example@gmail.com. Enter the OTP code below to verify.</string>
    <string name="didn_t_receive_email">Didn’t receive email?</string>
    <string name="you_can_resend_code_in">You can resend code in</string>
    <string name="_55">55 s</string>
    <string name="create_new_password">Create new password</string>
    <string name="desc_new_pass">Create new password if you forget it, then you have to do forgot password.</string>
    <string name="new_password">New Password</string>
    <string name="confirm_new_password">Confirm New Password</string>
    <string name="create">Create</string>
    <string name="art_of_the_week">Art of The Week</string>
    <string name="name">Name</string>
    <string name="user_name">User Name</string>
    <string name="image_card_home">Image Card Home</string>
    <string name="example_name">dream_art</string>
    <string name="image_card_user">Image card User</string>
    <string name="favorite_saya">Favorite Saya</string>
    <string name="title_home">Title Home</string>
    <string name="title_favorite">Title Favorite</string>
    <string name="title_popup">Kisah Sangkuriang</string>
    <string name="username_popup">Tatang Studio</string>
    <string name="available_for_work">Available for work</string>
    <string name="home_popup_desc">Hey Guys I\'m glad to share a new project with you</string>
    <string name="home_popup_desc_2">Cooperation can be contacted Email: hafiryamun88@gmail.com If you like, you can also follow me on instagram</string>
    <string name="work_with_me">Work with me</string>
    <string name="work_with_the_artist">Work with the Artist</string>
    <string name="captain_art">Captain Art</string>
    <string name="posted_2hr_ago">Posted 2hr Ago</string>
    <string name="posted_3hr_ago">Posted 3hr Ago</string>
    <string name="posted_10hr_ago">Posted 10hr Ago</string>
    <string name="posted_12hr_ago">Posted 12hr Ago</string>
    <string name="people_art_ncostume_art">People Art \nCostume Art</string>
    <string name="remote_friendly">Remote Friendly</string>
    <string name="_100_portofolio">100+ Portofolio</string>
    <string name="_50_portofolio">50+ Portofolio</string>
    <string name="_200_portofolio">200+ Portofolio</string>
    <string name="_150_portofolio">150+ Portofolio</string>
    <string name="start_idr_300k">Start IDR 300K</string>
    <string name="button_favorite">Button Favorite</string>
    <string name="button_bookmark">Button Bookmark</string>
    <string name="button_message">Button Message</string>
    <string name="button_cart">Button Cart</string>
    <string name="button_notifications">Button Notifications</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="continu">Continue</string>
    <string name="upload">Upload</string>
    <string name="upload_your_human_artwork">Upload Your Human Artwork</string>
    <string name="aI_generated_art_would_be_declined">AI Generated Art would be declined</string>
    <string name="terms_and_condition">Terms and Condition</string>
    <string name="terms_and_condition_description">
        \n- Minimum 1600px width recommended
        \n- Max 5MB for each file
        \n- High resolution images (png, jpg, gif)
        \n- Only upload media you own the rights to
        \n<b>- Upload Your Human-made Artwork</b>>
        \n<b>- Our Engine will decline an AI artwork</b>
    </string>
    <string name="give_me_a_name">Give me a name</string>
    <string name="description">Description</string>
    <string name="tags"><b>Tags</b>(maximum 3)</string>
    <string name="open_for_commission_job">Open for Commission Job</string>
    <string name="add_tags">Add Tags....</string>
    <string name="description_hint">Write  any details you’d like to mention</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sekarya">SEKARYA</string>
    <string name="dummyText">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="log_In">Sign In</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="sign_up">Sign Up</string>
    <string name="create_account">Create account</string>
    <string name="ca_sub">Fill the form for your new account</string>
    <string name="username">Username</string>
    <string name="do_you_already_have_an_account">do you already have an account?</string>
    <string name="welcome_back">Welcome back</string>
    <string name="enter_password">Please enter your email &amp; password to sign in</string>
    <string name="onboarding_tittle">Welcome to Global Art Exhibition</string>
    <string name="onboarding_description">This app will help you out navigate a both physical and virtual parts of exhibition.</string>
    <string name="register_tittle">Hello there</string>
    <string name="register_guide">Please enter your email and password to create an account.</string>
    <string name="account">Already have an account?</string>
    <string name="personal">Enter personal info</string>
    <string name="fullname">Full Name </string>
    <string name="phone">Phone Number</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="gender">Gender</string>
    <string name="skip">Skip</string>
    <string name="nickname">Nickname</string>
    <string name="pronouns">Pronouns</string>
    <string name="bio">Bio</string>
    <string name="finish">Finish</string>
    <string name="public_profile_tittle">Create public profile</string>
    <string name="public_profile_description">This username and profile will be a unique identity so people can find you and the artwork you share in the community.</string>
    <string name="cont">Continue</string>
    <string name="personal_description">Please enter your profile. Don’t worry, only you can see your personal data. No one else will be able to see it. Or you can skip it for now. </string>
    <string name="title_create">Title Create</string>
    <string name="recent_post">Recent Post</string>
    <string name="hire_not_found">Hire Not Found</string>
    <string name="we_cant_find_the_job">We Cant Find The Job!!</string>
    <string name="hire_not_found_desc">Try to use other keyword to find what your looking for</string>
    <string name="tag_ui">Tag UI</string>
    <string name="anime_fanart_ncostume_art">Anime Fanart \nCostume Art</string>
    <string name="deliver_in_7_days">Deliver in 7 Days</string>
    <string name="deliver_in_2_days">Deliver in 2 Days</string>
    <string name="deliver_in_5_days">Deliver in 5 Days</string>
    <string name="deliver_in_8_days">Deliver in 8 Days</string>
    <string name="post_job">Post Job</string>
    <string name="el_gato">El Gato</string>
    <string name="fanarts">Fanarts</string>
    <string name="illustrations">Illustrations</string>
    <string name="product">Product</string>
    <string name="brand">Brand</string>
    <string name="idr_100k_300k">IDR 100K - 300K</string>
    <string name="idr_100k_150k">IDR 100K - 150K</string>
    <string name="idr_200k_300k">IDR 200K - 300K</string>
    <string name="idr_100k_200k">IDR 100K - 200K</string>
    <string name="hire_detail_desc">I will make a Fanart based on Anime that can costum by your order. The Art was Potrait and Landscape.</string>
    <string name="hire_stock">Delivery : 14 Days \nRevision : 3 Times \nType Files : PSD, AI, JPG, PNG \nSlots Availability : 3</string>
    <string name="tag_for_this_art">Tag For This Art</string>
    <string name="other_for_this_artist">Other for this Artist</string>
    <string name="order_this_commission">Order this commission</string>
    <string name="title_hire">Title Hire</string>
    <string name="title_profile">Title Profile</string>
    <string name="age">Age</string>
    <string name="job">Job Category</string>

    <!-- Dummy String Home -->
    <string name="dryy">Dryy</string>
    <string name="yayat">Yayat</string>
    <string name="jack">Jack</string>
    <string name="dreamart">dreamy_art</string>
    <string name="kirigayayat">Kirigayayat</string>
    <string name="jack504">Jack_504</string>
    <string name="girlart">Girl Art</string>
    <string name="panic">Some Creatures Panic</string>
    <string name="john">John Smith</string>
    <string name="wanderer">The Wanderer</string>
    <string name="frieren">Devil Killer Frieren</string>
    <string name="ryo">Lazy Bassist</string>

    <!-- Dummy String Tag -->
    <string name="all">All</string>
    <string name="news">News</string>
    <string name="mascot">Mascot</string>
    <string name="ui">UI</string>
</resources>