<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.android.sekarya_mobile_app.ui.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home"/>

    <fragment
        android:id="@+id/navigation_favorite"
        android:name="com.android.sekarya_mobile_app.ui.FavoriteFragment"
        android:label="@string/title_favorite"
        tools:layout="@layout/fragment_favorite"/>

    <fragment
        android:id="@+id/navigation_create"
        android:name="com.android.sekarya_mobile_app.ui.createArt.CreatePortofolioFragment"
        android:label="@string/title_create"
        tools:layout="@layout/fragment_create_portofolio"/>

    <fragment
        android:id="@+id/navigation_hire"
        android:name="com.android.sekarya_mobile_app.ui.HireFragment"
        android:label="@string/title_hire"
        tools:layout="@layout/fragment_hire"/>

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.android.sekarya_mobile_app.ui.UserProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_user_profile"/>

</navigation>