<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:padding="8dp">

    <com.google.android.material.search.SearchBar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/search_hint"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <com.google.android.material.button.MaterialButton
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:text="@string/fanarts"
            android:textSize="10sp"
            app:cornerRadius="16dp"/>

        <com.google.android.material.button.MaterialButton
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="wrap_content"
            android:singleLine="true"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:text="@string/illustrations"
            android:textSize="10sp"
            app:cornerRadius="16dp"/>

        <com.google.android.material.button.MaterialButton
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="wrap_content"
            android:singleLine="true"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:text="@string/product"
            android:textSize="10sp"
            app:cornerRadius="16dp"/>

        <com.google.android.material.button.MaterialButton
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="wrap_content"
            android:singleLine="true"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:text="@string/brand"
            android:textSize="10sp"
            app:cornerRadius="16dp"/>

    </LinearLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/recent_post"
                android:fontFamily="@font/inter_bold"
                android:textSize="22sp"
                android:layout_marginHorizontal="15dp"/>

            <ImageView
                android:layout_width="293dp"
                android:layout_height="227dp"
                android:src="@drawable/hire_not_found"
                android:contentDescription="@string/hire_not_found"
                android:layout_gravity="center"
                android:visibility="gone"
                android:layout_marginTop="100dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/we_cant_find_the_job"
                android:fontFamily="@font/inter_bold"
                android:textSize="22sp"
                android:visibility="gone"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hire_not_found_desc"
                android:fontFamily="@font/inter_medium"
                android:textSize="14sp"
                android:visibility="gone"
                android:layout_marginTop="10dp"
                android:textColor="@color/black"
                android:layout_gravity="center"/>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:listitem="@layout/card_hire"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"/>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end|bottom"
        android:src="@drawable/ic_add"
        android:contentDescription="@string/post_job"
        android:layout_margin="16dp" />

</LinearLayout>