<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.google.android.material.card.MaterialCardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        app:cardElevation="4dp"
        app:cardCornerRadius="12dp"
        app:cardPreventCornerOverlap="true"
        app:cardUseCompatPadding="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/img_card_popup"
                android:layout_width="105dp"
                android:layout_height="105dp"
                android:layout_marginEnd="256dp"
                android:src="@drawable/wanderer"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_art"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginStart="10dp"
                android:fontFamily="@font/inter_regular"
                android:text="@string/captain_art"
                android:textSize="8sp"
                app:layout_constraintStart_toEndOf="@+id/img_card_popup"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_post"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/inter_medium"
                android:text="@string/posted_2hr_ago"
                android:textSize="8sp"
                app:layout_constraintBottom_toTopOf="@id/tv_deliver"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/tv_art_title"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_art_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="5dp"
                android:fontFamily="@font/inter_bold"
                android:text="@string/anime_fanart_ncostume_art"
                android:textSize="16sp"
                app:layout_constraintStart_toEndOf="@+id/img_card_popup"
                app:layout_constraintTop_toBottomOf="@+id/tv_art" />

            <TextView
                android:id="@+id/tv_deliver"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/inter_semibold"
                android:text="@string/deliver_in_7_days"
                android:textSize="10sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/tv_art_title"
                app:layout_constraintTop_toBottomOf="@+id/tv_post" />

            <TextView
                android:id="@+id/tv_portofolio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="5dp"
                android:fontFamily="@font/poppins_regular"
                android:text="@string/_100_portofolio"
                android:textSize="8sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/img_card_popup"
                app:layout_constraintTop_toBottomOf="@+id/tv_art_title" />

            <TextView
                android:id="@+id/tv_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/inter_semibold"
                android:text="@string/start_idr_300k"
                android:textColor="@color/primary"
                android:textSize="10sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/tv_art_title"
                app:layout_constraintTop_toBottomOf="@+id/tv_deliver" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>

</RelativeLayout>